--- a/index.html
+++ b/index.html
@@ -1,38 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/css/main.css">
   <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
+  <section>
 
-  “ I’ve been interested in coding for a while but never taken the jump, until now. 
-  I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
-  excited about the future. ”
+    <div class="container">
+      <div class="testimonial-card">
+        <div class="bio">
+          <div class="description" th>
+            <p>“ I’ve been interested in coding for a while but never taken the jump, until now.
+              I couldn’t recommend this course enough. I’m now in the job of my dreams and so
+              excited about the future. ”</p>
+          </div>
+          <div class="description-two">
+            <h6 class="name">Tanya Sinclair</h6>
+            <h6 class="job">UX Engineer</h6>
+          </div>
 
-  Tanya Sinclair
-  UX Engineer
+        </div>
+        <div class="profile-image"><img src="/images/image-tanya.jpg" alt="image-tanya">
+        </div>
+      </div>
 
-  “ If you want to lay the best foundation possible I’d recommend taking this course. 
-  The depth the instructors go into is incredible. I now feel so confident about 
-  starting up as a professional developer. ”
+      <!--<div class="testimonial-card">
+        <div class="bio">
+          <p class="description">“ If you want to lay the best foundation possible I’d recommend taking this course.
+            The depth the instructors go into is incredible. I now feel so confident about
+            starting up as a professional developer. ”</p>
+          <h6 class="name">John Tarkpor</h6>
+          <h6 class="job">Junior Front-end Developer</h6>
+        </div>
+        <img src="/images/image-john.jpg" alt="image-john">
 
-  John Tarkpor
-  Junior Front-end Developer
-  
+      </div>-->
+    </div>
+  </section>
+
+
+
+
+
+
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Sergen Demir</a>.
   </div>
 </body>
+
 </html>
