desktop-version(done-ish)

--- a/index.html
+++ b/index.html
@@ -17,41 +17,50 @@
     <div class="container">
       <div class="testimonial-card">
         <div class="bio">
-          <div class="description" th>
+          <div class="description">
             <p>“ I’ve been interested in coding for a while but never taken the jump, until now.
               I couldn’t recommend this course enough. I’m now in the job of my dreams and so
               excited about the future. ”</p>
           </div>
           <div class="description-two">
-            <h6 class="name">Tanya Sinclair</h6>
-            <h6 class="job">UX Engineer</h6>
+            <h6>Tanya Sinclair</h6>
+            <h6>UX Engineer</h6>
           </div>
-
         </div>
-        <div class="profile-image"><img src="/images/image-tanya.jpg" alt="image-tanya">
+        <div class="profile-image">
+          <div class="image"><img src="/images/image-tanya.jpg" alt="image-tanya"></div>
+          <div class="btn">
+            <button><img src="/images/icon-prev.svg" alt=""></img></button>
+            <button><img src="/images/icon-next.svg" alt=""></img></button>
+          </div>
         </div>
       </div>
-
-      <!--<div class="testimonial-card">
-        <div class="bio">
-          <p class="description">“ If you want to lay the best foundation possible I’d recommend taking this course.
-            The depth the instructors go into is incredible. I now feel so confident about
-            starting up as a professional developer. ”</p>
-          <h6 class="name">John Tarkpor</h6>
-          <h6 class="job">Junior Front-end Developer</h6>
-        </div>
-        <img src="/images/image-john.jpg" alt="image-john">
-
-      </div>-->
     </div>
   </section>
 
-
-
-
-
-
-
+  <section>
+    <div class="container">
+      <div class="testimonial-card">
+        <div class="bio">
+          <p class="description">“ If you want to lay the best foundation possible I’d recommend taking this
+            course.
+            The depth the instructors go into is incredible. I now feel so confident about
+            starting up as a professional developer. ”</p>
+          <div class="description-two two">
+            <h6>John Tarkpor</h6>
+            <h6>Junior Front-end Developer</h6>
+          </div>
+        </div>
+        <div class="profile-image">
+          <div class="image"><img src="/images/image-john.jpg" alt="image-john"></div>
+          <div class="btn">
+            <button><img src="/images/icon-prev.svg" alt=""></img></button>
+            <button><img src="/images/icon-next.svg" alt=""></img></button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Sergen Demir</a>.
